--- a/home/static/style.scss
+++ b/home/static/style.scss
@@ -10,7 +10,7 @@ body {
   .wrapper {
     width: 100%;
     height: 100vh;
-    background: #1D1313;
+    background: rgba(255, 255, 255, .4);
     position: absolute;
     overflow: hidden;
 
@@ -23,6 +23,7 @@ body {
       height: 4px;
       background: #ffffff;
       cursor: pointer;
+      display:block;
 
       &:before, &:after {
         display: block;
