--- a/home/templates/home/header.html
+++ b/home/templates/home/header.html
@@ -7,17 +7,29 @@
 <html lang="en">
 <head>
 
+    <style>
+        body {
+            background-image: url("{% static 'mountain-6.jpg' %}");
+            background-repeat:no-repeat;
+            background-size:cover;
+            box-shadow:inset 0 0 0 500px rgba(0,0,0,0.5);
+        }
+    </style>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <!--<link rel="stylesheet" type="text/css" href="{% static 'style.scss' %}"/>-->
+    <script src="{% static 'jquery.touchSwipe.min.js' %}" type="text/javascript"></script>
+
+    <link rel="stylesheet" type="text/css" href="{% static 'menubar.css' %}"/>
 
     {% compress css %}
         <link rel="stylesheet" type="text/x-scss" href="{% static 'style.scss' %}" />
     {% endcompress %}
 
     <script src = "{% static 'nav.js' %}" type="text/javascript"></script>
+
 
 </head>
