Commit Home Style

--- a/home/templates/home/header.html
+++ b/home/templates/home/header.html
@@ -12,9 +12,13 @@
             background-image: url("{% static 'mountain-6.jpg' %}");
             background-repeat:no-repeat;
             background-size:cover;
-            box-shadow:inset 0 0 0 500px rgba(0,0,0,0.5);
+            box-shadow:inset 0 0 0 500px rgba(0,0,0,0.2);
         }
     </style>
+
+    <!--Bootstrap-->
+    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
+    <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
