--- a/delivery/templates/delivery/header.html
+++ b/delivery/templates/delivery/header.html
@@ -31,8 +31,8 @@
         <h3 class="menu-section-title">Docs</h3>
         <ul class="menu-section-list">
           <li><a href="{% url 'home:home' %}">Home</a></li>
-          <li><a href="https://github.com/mango/slideout#usage" target="_blank">Usage</a></li>
-          <li><a href="https://github.com/mango/slideout#api" target="_blank">API</a></li>
+          <li><a href="{% url 'shop:shop' %}">Shop</a></li>
+          <li><a href="https://github.com/mango/slideout#api">API</a></li>
           <li><a href="https://github.com/mango/slideout#npm-scripts" target="_blank">npm-scripts</a></li>
         </ul>
       </section>
