--- a/shop/templates/shop/header.html
+++ b/shop/templates/shop/header.html
@@ -25,6 +25,11 @@
     <script src="{% static 'shop/bootstrap-4.0.0-beta/assets/js/vendor/popper.min.js' %}" ></script>
     <script src="{% static 'shop/bootstrap-4.0.0-beta/dist/js/bootstrap.min.js' %}" ></script>
 
+    <!-- Slick plugin -->
+    <link rel="stylesheet" type="text/css" href="{% static 'shop/slick-1.6.0/slick/slick.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'shop/slick-1.6.0/slick/slick-theme.css' %}"/>
+    <script type="text/javascript" src="{% static 'shop/slick-1.6.0/slick/slick.min.js' %}"></script>
+
     <nav id="menu" class="menu">
     <section class="menu-section">
         <h3 class="menu-section-title">Herbology</h3>
