--- a/shop/templates/shop/header.html
+++ b/shop/templates/shop/header.html
@@ -15,6 +15,8 @@
     <meta name="HandheldFriendly" content="True">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+
+    <!-- slideout.js -->
     <script src="{% static 'shop/slideout-1.0.1/dist/slideout.js' %}"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/1.13.0/mocha.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'shop/slideout-1.0.1/index.css' %}"/>
@@ -28,7 +30,12 @@
     <!-- Slick plugin -->
     <link rel="stylesheet" type="text/css" href="{% static 'shop/slick-1.6.0/slick/slick.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'shop/slick-1.6.0/slick/slick-theme.css' %}"/>
+    <script type="text/javascript" src="{% static 'shop/jquery-1.11.0.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'shop/jquery-migrate-1.2.1.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'shop/slick-1.6.0/slick/slick.min.js' %}"></script>
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" type="text/css" href="{% static 'shop/font-awesome-4.7.0/css/font-awesome.min.css' %}"/>
 
     <nav id="menu" class="menu">
     <section class="menu-section">
