--- a/shop/static/shop/shopstyle.css
+++ b/shop/static/shop/shopstyle.css
@@ -2,6 +2,7 @@
 .slick-slider {
     position: relative;
     width: 100%;
+    height: 85%;
     display: block;
     box-sizing: border-box;
 
@@ -75,11 +76,17 @@
     height: 100%;
     min-height: 1px;
     width: 100%;
+    opacity: 1;
+    transition: opacity 300ms ease-in-out;
 
     &:focus,
     &:hover {
         outline: 0;
     }
+}
+
+.slick-slide.opacidown{
+    opacity: 0;
 }
 
 [dir='rtl'] .slick-slide {
