--- a/shop/static/shop/slideout-1.0.1/index.css
+++ b/shop/static/shop/slideout-1.0.1/index.css
@@ -299,7 +299,7 @@ a {
   height: 50px;
   backface-visibility: hidden;
   z-index: 2;
-  background-color: #034F84;
+  background-color: #4f5263;
 }
 
 /**
