--- a/shop/templates/shop/header.html
+++ b/shop/templates/shop/header.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'shop/slideout-1.0.1/index.css' %}"/>
 
     <!-- getbootstrap plugins -->
-    <link rel="stylesheet" href="{% static 'shop/bootstrap-4.0.0-beta/dist/css/bootstrap.min.css' %}" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <script src="{% static 'shop/bootstrap-4.0.0-beta/assets/js/vendor/jquery-slim.min.js' %}"></script>
     <script src="{% static 'shop/bootstrap-4.0.0-beta/assets/js/vendor/popper.min.js' %}" ></script>
     <script src="{% static 'shop/bootstrap-4.0.0-beta/dist/js/bootstrap.min.js' %}" ></script>
@@ -34,6 +34,11 @@
     <script type="text/javascript" src="{% static 'shop/jquery-migrate-1.2.1.min.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script type="text/javascript" src="{% static 'shop/slick-1.6.0/slick/slick.min.js' %}"></script>
+
+    <!-- Dropdown hover animation -->
+    <link rel="stylesheet" type="text/css" href="{% static 'shop/dropdown-hover/css/animate.min.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'shop/dropdown-hover/css/bootstrap-dropdownhover.min.css' %}"/>
+    <script type="text/javascript" src="{% static 'shop/dropdown-hover/js/bootstrap-dropdownhover.min.js' %}"></script>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" type="text/css" href="{% static 'shop/font-awesome-4.7.0/css/font-awesome.min.css' %}"/>
