--- a/shop/templates/shop/shop.html
+++ b/shop/templates/shop/shop.html
@@ -6,8 +6,6 @@
 <link rel="stylesheet" href="{% static 'shop/shopstyle.css' %}">
 <body>
 
-
-
     <main id="panel" class="panel">
     <br>
     <br>
@@ -29,7 +27,7 @@
                 <a class="nav-link" href="#">Pricing</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-hover="dropdown" data-animations="fadeInDown fadeInLeft fadeInUp fadeInRight">
                   Dropdown link
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
