--- a/shop/templates/shop/shop.html
+++ b/shop/templates/shop/shop.html
@@ -39,7 +39,7 @@
             </ul>
           </div>
         </nav>
-    <header class="panel-header">
+    <header class="panel-header" style="margin-top:-30px">
       <h1 class="title">Herbology</h1>
     </header>
 
